<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pe.edu.upeu.registro.Register"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_name"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="11dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="49dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtNombre"
        android:layout_below="@+id/txtNombre"
        android:layout_marginTop="24dp"
        android:text="@string/message_last_name_f" />

    <EditText
        android:id="@+id/txtLastNameF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtLastNameF"
        android:layout_below="@+id/txtLastNameF"
        android:layout_marginTop="20dp"
        android:text="@string/message_last_name_m" />

    <EditText
        android:id="@+id/txtLastNameM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtLastNameM"
        android:layout_below="@+id/txtLastNameM"
        android:layout_marginTop="23dp"
        android:text="@string/btn_msg_save" />


</RelativeLayout>
